------------------------------------------------------------------------------

*** CORE/CPU ***
64bit compilation supported
XMAME port for unix/linux systems
PROC support (needs special compile with PROC_SUPPORT defined) to drive (at least) real WPC machines with PinMAME/PROC

New S14001A sound core for old Sterns (Catacomb, Flight 2000, Freefall, Lightning, Orbitor 1, and Split Second)
Improved BSMT2000 sound core for Sega, Alvin G. DMDs, Data East DMDs (Batman and newer), and Stern DMDs (up to Terminator 3)
Improved Brave Team sound core

*** ROM SUPPORT *** Thanks to Inkochnito, Soren
New:
MAC: MAC Jungle (1995 version)
Sleic: Bike Race (2-ball play) (not working yet)
Sonic: Hang-On
Unknown: Wild Texas (Firepower II Modification)

Clones:
Bram Stoker's Dracula L-2C (competition MOD)
Creature from the Black Lagoon L-5C (competition MOD)
Dr. Dude LA-3C (competition MOD)
Earthshaker LA-4C (competition MOD)
Hook 4.01p (4.01 with Prototype Sound)
Inder Centaur (alternate version)
Hyperball L-3
Lethal Weapon 2.03
Meteor (Bonus Count Fix, 'Fixes a rare bug where the bonus seems to countdown endlessly')
Taxi LU-1
Taxi (Lola) L-5C (competition MOD)
Taxi (Marilyn) L-5C (competition MOD)
Theatre of Magic 1.5C (competition MOD)
Tales of the Arabian Nights 1.5C (competition MOD)
World Cup Soccer LX-3C (competition MOD)



Version 2.6 (December 24, 2015) - "The team awakens"
------------------------------------------------------------------------------
Three and a half years have gone by since the last release.
We kept everybody happy by putting out beta versions now and then,
but now we felt the time was right to issue a new version.

This time, Visual PinMAME will also be bundled with the new VP10 in one installer package
in order to reduce the amount of inherent knowledge needed to create a working playable setup.

Have fun, and Merry Christmas everyone! :)

*** CORE/CPU ***
Set DCS sample rate to 31,250 Hz, fixes most DCS sound issues